Fix: menu button width on mobile

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -36,7 +36,10 @@ nav {
     }
 
     .button {
-        display: block;
+        
+        @media (min-width: $b-medium) {
+            display: block;
+        }
     }
 
     .menu-open & {
